# dtodo-widget

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  dtodo-widget.desktop  main.cpp  resources.qrc  todoitem.cpp  todoitem.h  todowidget.cpp  todowidget.h
debian/: changelog  control
